ZenZone now has a BottomTab that navigates between screens

--- a/application/frontend/tsconfig.json
+++ b/application/frontend/tsconfig.json
@@ -41,5 +41,5 @@
     "babel.config.js",
     "metro.config.js"
   ],
-  "extends": "expo/tsconfig.base"
+  "extends": "./node_modules/expo/tsconfig.base"
 }
