--- a/application/frontend/tsconfig.json
+++ b/application/frontend/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "types": [
       "react",
-      "react-native"
+      "react-native",
+      "@types/node"
     ],
     "paths": {
       "@components/*": [
